fix: float 메뉴 z-index, theme 모바일 select, 가로스크롤 수정

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -91,7 +91,7 @@ main > section > .section-inner {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  z-index: 1;
+  z-index: 10;
   opacity: 0;
   visibility: hidden;
   transition:
