--- a/assets/css/details/themes.css
+++ b/assets/css/details/themes.css
@@ -288,7 +288,17 @@
   border-radius: 8px;
   overflow: hidden;
 }
-
+.preview-item:before {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #000 100%);
+  z-index: 2;
+}
 .preview-column-center .preview-item img {
   aspect-ratio: 514 / 525;
 }
@@ -400,6 +410,7 @@
     border-width: 4px;
   }
   .themes-stage::after {
+    z-index: 1;
     width: 48px;
     height: 24px;
     left: calc(50% - 48px / 2);
@@ -411,11 +422,14 @@
     display: none;
   }
   .mobile-theme-dropdown {
+    z-index: 1;
+    position: relative;
     display: block !important;
     padding: 48px 20px 40px;
   }
 
   .mobile-theme-dropdown select {
+    position: relative;
     width: 100%;
     font-size: 14px;
     font-weight: 600;
@@ -431,6 +445,9 @@
     padding: 14px 48px 14px 18px;
     cursor: pointer;
     backdrop-filter: blur(3px);
+  }
+  .mobile-theme-dropdown select::before {
+    content: '';
   }
   .mobile-theme-dropdown select:focus {
     outline: none;
@@ -453,6 +470,7 @@
     gap: 24px;
   }
   .preview-label {
+    z-index: 10;
     left: 16px;
     bottom: 12px;
     right: auto;
@@ -460,5 +478,17 @@
   }
   .preview-item img {
     aspect-ratio: 533 / 332 !important;
+  }
+
+  .theme-header-wrapper.theme-space-wonders::before {
+    top: -135px;
+    height: calc(100% + 135px);
+  }
+  .section-themes.theme-space-wonders .mobile-theme-dropdown select {
+    border-color: rgba(255, 255, 255, 0.20);
+    background-color: #171717;
+    backdrop-filter: blur(3px);
+    background-image: url('../../icons/icon-angle-down_white.svg');
+    color: #D1D1D1;
   }
 }
